Refactor service functions with more readable names
